--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="dark_blue">#0F21C5</color>
-    <color name="ripple_clr">#03A9F4</color>
+    <color name="blue">#0F21C5</color>
+    <color name="ripple_clr">#304DEA</color>
 </resources>
