--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,11 @@
     <color name="dark_blue">#0F21C5</color>
     <color name="blue">#0F21C5</color>
     <color name="ripple_clr">#304DEA</color>
+    <color name="red">#FF0000</color>
+    <color name="ripple_effect">#43FFD9</color>
+    <color name="cursor_clr">#000000</color>
+    <color name="grey">#62555252</color>
+    <color name="lightgreen">#11FF00</color>
+    <color name="notification_bar_color">#364AFF</color>
+    <color name="theme_p1">#1260CC</color>
 </resources>
