--- a/app/src/main/res/layout/activity_insurance_details.xml
+++ b/app/src/main/res/layout/activity_insurance_details.xml
@@ -1,186 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Insurance_details">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="20dp">
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="POLICY NAME : "
-        app:hintTextColor="@color/lightgreen"
-        android:id="@+id/nitrogen1">
-
-        <EditText
-            android:editable="false"
-            android:id="@+id/policyName"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="70" />//add icon after height
-    </com.google.android.material.textfield.TextInputLayout>
+            android:orientation="vertical"
+            android:padding="23dp">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="POLICY DESCRIPTION "
-        android:id="@+id/phosphorus1">
-        <EditText
-            android:editable="false"
-
-            android:id="@+id/policyDescription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="25"
-            android:inputType="text"
-            android:text="35"/>//add icon after height
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="POLICY COVER "
-        android:id="@+id/potassium2">
-        <EditText
-
+            <TextView
+                android:id="@+id/policyName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                 />
+            <TextView
+                android:id="@+id/policyDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                /><TextView
             android:id="@+id/policyCover"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:editable="false"
-            android:inputType="phone"
-            android:text="35"/>//add icon after height
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="TARGET ENTITY "
-        >
-        <EditText
-            android:editable="false"
-
+            /><TextView
             android:id="@+id/targetEntity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="text"
-            android:text="21"/>//add icon after height
-    </com.google.android.material.textfield.TextInputLayout>
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="PREMIUM LOWER BOUND "
-        >
-        <EditText
-            android:editable="false"
-
+            /><TextView
             android:id="@+id/premiumLowerBound"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="text"
-            android:text="21"/>//add icon after height
-    </com.google.android.material.textfield.TextInputLayout>
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="CLAIM SETTLEMENT RATIO"
-        >
-        <EditText
-            android:editable="false"
-
+            /><TextView
             android:id="@+id/claimSettlementRatio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="text"
-            android:text="8"/>//add icon after height
-    </com.google.android.material.textfield.TextInputLayout>
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="AMMOUNT SETTLEMENT RATIO "
-        >
-        <EditText
-            android:editable="false"
-
+            /><TextView
             android:id="@+id/amountSettlementRatio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="text"
-            android:text="230"/>//add icon after height
-    </com.google.android.material.textfield.TextInputLayout>
-        <com.google.android.material.textfield.TextInputLayout
+            /><TextView
+            android:id="@+id/planid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="WAITING PERIOD IN DAYS "
-            >
-            <EditText
-                android:editable="false"
-
-                android:id="@+id/waitingPeriodInDays"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="text"
-                android:text="230"/>//add icon after height
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
+            /><TextView
+            android:id="@+id/waitingPeriodInDays"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="NO CLAIMS BONUS  "
-            >
-            <EditText
-                android:editable="false"
-
-                android:id="@+id/noClaimBonus"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="text"
-                android:text="230"/>//add icon after height
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
+            /><TextView
+            android:id="@+id/noClaimBonus"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint=" PLAN ID"
-            >
-            <EditText
-                android:editable="false"
+            />
 
-                android:id="@+id/planId"
+            <TextView
+                android:id="@+id/alreadyApplied"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="text"
-                android:text="230"/>//add icon after height
-        </com.google.android.material.textfield.TextInputLayout>
+                android:text="You have Already Applied for this policy"
+                android:textAlignment="center"
+                android:textStyle="bold|italic"
+                android:layout_marginTop="30dp"
+                android:visibility="invisible" />
+            <Button
 
-        <Button
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:layout_width="match_parent"
+                    android:id="@+id/apply"
+                    android:text="Apply For Policy "
+                    android:backgroundTint="@color/dark_blue"
+                    app:rippleColor="@color/ripple_effect"/>
 
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_width="match_parent"
-        android:id="@+id/apply"
-        android:text="Apply For Policy "
-        android:backgroundTint="@color/dark_blue"
-        app:rippleColor="@color/ripple_effect"/>
-
-    </LinearLayout>
-
-</ScrollView>
+        </LinearLayout>
+    </ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
