--- a/app/src/main/res/layout/opted_insurance_cardview.xml
+++ b/app/src/main/res/layout/opted_insurance_cardview.xml
@@ -55,19 +55,22 @@
             android:elevation="30dp"
             app:cardCornerRadius="0dp"
             app:cardElevation="5dp"
-            app:cardUseCompatPadding="true">
-                <TextView
-                    android:id="@+id/opted_policy_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="TextView"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+            app:cardUseCompatPadding="false">
+
+            <TextView
+                android:id="@+id/opted_policy_name"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="TextView"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.cardview.widget.CardView>
-    <TextView
+
+        <TextView
             android:id="@+id/opted_policy_desc"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView"
             app:layout_constraintStart_toStartOf="parent"
@@ -75,10 +78,11 @@
 
         <TextView
             android:id="@+id/opted_policy_premium"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="TextView"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/opted_policy_desc"
