Financing tab implemented; with database using firestorecloud ; loanDetails remaaining to implement

--- a/app/src/main/res/menu/bottom_navbar_menu.xml
+++ b/app/src/main/res/menu/bottom_navbar_menu.xml
@@ -5,6 +5,11 @@
         android:title="Home"
         android:icon="@drawable/ic_baseline_home_24"/>
     <item
+        android:id="@+id/financing"
+        android:title="Financing"
+        android:icon="@drawable/ic_money_lending"/>
+
+    <item
         android:id="@+id/advise"
         android:title="Advise"
         android:icon="@drawable/ic_advice"/>
@@ -12,4 +17,6 @@
         android:id="@+id/dashboard"
         android:title="Dashboard"
         android:icon="@drawable/ic_baseline_dashboard_24"/>
+
+
 </menu>
