--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -6,5 +6,10 @@
         android:title="Log-out"
         android:visible="true"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_profile"
+        android:title="Profile"
+        android:visible="true"
+        app:showAsAction="never" />
 
 </menu>
