--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -25,6 +25,7 @@
             app:cardElevation="20dp">
 
             <LinearLayout
+                android:id="@+id/profileInfo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
@@ -60,7 +61,33 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="3sp"
                     android:padding="3sp" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/policy_opted"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Policy Opted"
+                    android:layout_margin="3sp"
+                    android:elevation="20dp"
+                    android:padding="3sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/loan_opted"
+                    android:text="Loan Opted"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="3sp"
+                    android:padding="3sp" />
+                </LinearLayout>
+
+                />
+
             </LinearLayout>
+
         </androidx.cardview.widget.CardView>
 
         <androidx.recyclerview.widget.RecyclerView
