--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,12 +7,32 @@
     android:orientation="vertical"
     android:background="@color/black">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/welcome"
+            android:layout_width="match_parent"
+            android:layout_weight="0.25"
+            android:layout_height="0dp"
+            android:fontFamily="@font/abril_fatface"
+            android:gravity="center"
+            android:paddingBottom="10dp"
+            android:text="AgriLife"
+            android:textColor="#ffffff"
+            android:textSize="35sp" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/logo"/>
 
     <EditText
         android:id="@+id/name"
         android:layout_width="match_parent"
-        android:layout_weight="0.1"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:drawableLeft="@drawable/ic_action_per"
         android:ems="10"
@@ -24,8 +44,7 @@
     <EditText
         android:id="@+id/email"
         android:layout_width="match_parent"
-        android:layout_weight="0.1"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:drawableLeft="@drawable/ic_action_user"
         android:ems="10"
@@ -38,8 +57,7 @@
     <EditText
         android:id="@+id/phoneno"
         android:layout_width="match_parent"
-        android:layout_weight="0.1"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:inputType="number"
         android:drawableLeft="@drawable/ic_action_per"
@@ -51,8 +69,8 @@
     <EditText
         android:id="@+id/address"
         android:layout_width="match_parent"
-        android:layout_weight="0.1"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+
         android:layout_marginTop="10dp"
         android:inputType="textCapWords"
 
@@ -63,13 +81,89 @@
         android:paddingLeft="10dp"
         android:textColor="@color/white" />
 
+        <EditText
+            android:id="@+id/edittextdescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:layout_marginTop="10dp"
+            android:inputType="textCapWords"
+
+            android:drawableLeft="@drawable/ic_action_per"
+            android:ems="10"
+            android:hint=" Description "
+            android:textColorHint="#5C5656"
+            android:paddingLeft="10dp"
+            android:textColor="@color/white" />
+
+        <EditText
+            android:id="@+id/edittextsector"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:layout_marginTop="10dp"
+            android:inputType="textCapWords"
+
+            android:drawableLeft="@drawable/ic_action_per"
+            android:ems="10"
+            android:hint=" Sector "
+            android:textColorHint="#5C5656"
+            android:paddingLeft="10dp"
+            android:textColor="@color/white" />
 
 
-    <EditText
+        <EditText
+            android:id="@+id/edittextaadharcard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:layout_marginTop="10dp"
+            android:inputType="textCapWords"
+
+            android:drawableLeft="@drawable/ic_action_per"
+            android:ems="10"
+            android:hint="Aadhar Card Number"
+            android:textColorHint="#5C5656"
+            android:paddingLeft="10dp"
+            android:textColor="@color/white" />
+
+        <EditText
+            android:id="@+id/edittextaccountno"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:layout_marginTop="10dp"
+            android:inputType="textCapWords"
+
+            android:drawableLeft="@drawable/ic_action_per"
+            android:ems="10"
+            android:hint="Bank Account Number"
+            android:textColorHint="#5C5656"
+            android:paddingLeft="10dp"
+            android:textColor="@color/white" />
+
+        <EditText
+            android:id="@+id/edittextifsc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:layout_marginTop="10dp"
+            android:inputType="textCapWords"
+
+            android:drawableLeft="@drawable/ic_action_per"
+            android:ems="10"
+            android:hint="Bank Account Number"
+            android:textColorHint="#5C5656"
+            android:paddingLeft="10dp"
+            android:textColor="@color/white" />
+
+
+
+        <EditText
         android:id="@+id/password1"
         android:layout_width="match_parent"
-        android:layout_weight="0.1"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+
         android:layout_marginTop="10dp"
         android:drawableLeft="@drawable/ic_action_pass"
         android:ems="10"
@@ -79,11 +173,13 @@
         android:textColorHint="#5C5656"
         android:paddingLeft="10dp" />
 
+
+
     <EditText
         android:id="@+id/password2"
         android:layout_width="match_parent"
-        android:layout_weight="0.1"
-        android:layout_height="0dp" android:layout_marginTop="10dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:drawableLeft="@drawable/ic_action_pass"
         android:ems="10"
         android:hint="Confirm Password"
@@ -95,7 +191,7 @@
     <Button
         android:id="@+id/button3"
         android:layout_width="match_parent"
-        android:layout_weight="0.05"
+        android:layout_weight="0.25"
         android:layout_height="0dp"
         android:layout_marginLeft="100dp"
         android:layout_marginTop="20dp"
@@ -104,5 +200,7 @@
         android:background="@drawable/button"
         android:text="Register" />
 
+    </LinearLayout>
 
-</LinearLayout>
+
+</ScrollView>
