--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -61,31 +61,47 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="3sp"
                     android:padding="3sp" />
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                <TextView
-                    android:id="@+id/policy_opted"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Policy Opted"
-                    android:layout_margin="3sp"
-                    android:elevation="20dp"
-                    android:padding="3sp"
-                    android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/loan_opted"
-                    android:text="Loan Opted"
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="3sp"
-                    android:padding="3sp" />
-                </LinearLayout>
+                    android:layout_height="match_parent"
+                    android:elevation="0sp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/policy_opted"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5sp"
+                            android:layout_weight="1"
+                            android:background="@drawable/textview_bg"
+                            android:elevation="20dp"
+                            android:padding="5sp"
+                            android:text="Policy Opted"
+                            android:textSize="24sp" />
+
+                        <TextView
+                            android:id="@+id/loan_opted"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5sp"
+                            android:layout_weight="1"
+                            android:background="@drawable/textview_bg"
+                            android:elevation="20sp"
+                            android:padding="5sp"
+                            android:text="Loan Opted"
+                            android:textSize="24sp" />
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+                <![CDATA[
 
                 />
 
+            ]]>
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
