--- a/app/src/main/res/drawable/textview_bg.xml
+++ b/app/src/main/res/drawable/textview_bg.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:top="-3dp" android:left="-3dp" android:right="-3dp">
         <shape android:shape="rectangle">
-            <stroke android:width="3dp" android:color="#03CB03" />
+            <stroke android:width="3dp" android:color="#000000" />
             <solid android:color="#00000000" />
         </shape>
     </item>
