--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ProfileFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -148,20 +149,22 @@
 
 
             <Button
-                android:background="#fece2f"
+                android:id="@+id/update"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
-                android:layout_width="match_parent"
-                android:id="@+id/update"
-                android:text="UPDATE" />
+                android:backgroundTint="@color/dark_blue"
+                android:text="UPDATE"
+                app:rippleColor="@color/ripple_effect" />
 
             <Button
-                android:background="#fece2f"
+                android:id="@+id/logout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
-                android:layout_width="match_parent"
-                android:id="@+id/logout"
-                android:text="LOGOUT" />
+                android:backgroundTint="@color/dark_blue"
+                android:text="LOGOUT"
+                app:rippleColor="@color/ripple_effect" />
 
 
         </LinearLayout>    //lower part (update section)
