--- a/app/src/main/res/layout/activity_new_login.xml
+++ b/app/src/main/res/layout/activity_new_login.xml
@@ -65,14 +65,15 @@
     <Button
         android:id="@+id/button"
         android:layout_width="match_parent"
-        android:layout_weight="0.075"
         android:layout_height="0dp"
         android:layout_marginLeft="75dp"
-        android:layout_marginRight="75dp"
         android:layout_marginTop="5dp"
-        android:background="@drawable/button"
+        android:layout_marginRight="75dp"
+        android:layout_weight="0.075"
+        android:backgroundTint="@color/dark_blue"
         android:gravity="center"
-        android:text="Login" />
+        android:text="Login"
+        app:rippleColor="@color/ripple_effect" />
 
     <TextView
         android:id="@+id/textView9"
@@ -89,13 +90,14 @@
     <Button
         android:id="@+id/button2"
         android:layout_width="match_parent"
-        android:layout_weight="0.075"
         android:layout_height="0dp"
-        android:background="@drawable/button"
         android:layout_marginLeft="75dp"
-        android:layout_marginRight="75dp"
         android:layout_marginTop="5dp"
-        android:text="SignUp" />
+        android:layout_marginRight="75dp"
+        android:layout_weight="0.075"
+        android:backgroundTint="@color/dark_blue"
+        android:text="SignUp"
+        app:rippleColor="@color/ripple_effect" />
 
 
 </LinearLayout>
